welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:17: error: not found: value Ymax
	for(nb <- 1 to Ymax) {
                       ^